fix text wrapping on listing page for iOS; whitespace nowrap - text-overflow ellipsis

--- a/static/base.css
+++ b/static/base.css
@@ -471,3 +471,10 @@ blockquote {
 .expanded-post {
 	width: -webkit-fill-available;
 }
+
+.col.inner-div {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	width: 265px;
+}
